--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -20,7 +20,7 @@ jobs:
             body: "🎉 You've created this issue comment using GitHub Script!!!"
             })
 
-    - name: Add issue to project board
+    - name: Add issue to project board.
       if: contains(github.event.issue.labels.*.name, 'bug')
       uses: actions/github-script@0.8.0
       with:
